Sat Jun 10 10:13:13 2006  NAKAMURA Usaku  <usa@ruby-lang.org>

	* lib/getoptlong.rb (GetoptLong#set_options): recieve arguments
	  as Array.

	* lib/irb/slex.rb: use Proc#yield.

	* lib/rdoc/markup/simple_markup/inline.rb: follow the new behavior
	  of String#[].

	* lib/rdoc/ri/ri_write.rb: ditto.

Sat Jun 10 08:17:23 2006  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* math.c (log2): may be a macro.

	* parse.y (args, block_param, f_args): pass f_post_arg to #params.

	* util.c (powersOf10): constified.

	* ext/readline/readline.c: include extconf.h first.

	* ext/ripper/eventids2.c: removed tLAMBDA_ARG.

	* ext/tk/tcltklib.c (lib_fromUTF8_core): removed conflict.

	* ext/tk/tkutil/tkutil.c (cbsubst_get_subst_arg): rb_id2name() is
	  defined as const now.

	* ext/win32ole/win32ole.c (fole_missing): ditto.

	* lib/mkmf.rb (create_makefile): force to create extconf header.

	* lib/optparse.rb (order!): use Proc#yield.

Sat Jun 10 06:53:22 2006  NAKAMURA Usaku  <usa@ruby-lang.org>

	* eval.c (CALLARGS): remove last semicolon. C90 compiler doesn't
	  allow any lines (even if they're empty) within variable
	  declaretions.

Fri Jun  9 09:56:32 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* sprintf.c (rb_str_format): allow %c to print one character
	  string (e.g. ?x).

Thu Jun  8 14:00:02 2006  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.[ch] (rb_w32_read, rb_w32_write): new functions.
	  use recv() and send() when fd is socket. fixed: [ruby-dev:28694]

Wed Jun  7 16:22:51 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/tempfile.rb (Tempfile::make_tmpname): put dot between
	  basename and pid.  [ruby-talk:196272]

Wed Jun  7 16:16:29 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* parse.y (do_block): remove -> style block.

	* parse.y (parser_yylex): remove tLAMBDA_ARG.

Wed Jun  7 14:51:22 2006  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (errmap): add some winsock errors.

Wed Jun  7 09:14:44 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>