@@ -1,3 +1,8 @@
+Sat Jun 10 15:12:29 2006  NAKAMURA Usaku  <usa@ruby-lang.org>
+
+	* eval.c (rb_f_method_name, rb_f_callee_name): new functions.
+	  new global method `__method__' and `__callee__'.
+
 Sat Jun 10 10:13:13 2006  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* lib/getoptlong.rb (GetoptLong#set_options): recieve arguments
